Kubernetes/04-ts-db_influxdb/01-ts-db_influxdb-k8.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: ts-db
    name: ts-db
    namespace: dt
spec:
    replicas: 1
    selector:
        matchLabels:
            app: ts-db
    template:
        metadata:
            labels:
                app: ts-db
        spec:
            containers:
              - image: influxdb:2.0.6
                name: ts-db
                ports:
                  - containerPort: 8086
                    name: ts-db
                volumeMounts:
                  - mountPath: /var/lib/influxdb2
                    name: data
            volumes:
              - name: data
                hostPath:
                  path: /etc/influxdb2
                  type: DirectoryOrCreate

---
apiVersion: v1
kind: Service
metadata:
    name: ts-db-svc
    namespace: dt
spec:
    ports:
      - name: ts-db-svc
        port: 8086
        targetPort: 8086
    selector:
        app: ts-db
    type: NodePort
