Kubernetes/04-ts-db_influxdb/02-ts-db_influxdb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ts-db-ingress
  namespace: dt
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1 #/$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"

spec:
  rules:
  - http:
      paths:
      - path: /ts-db #/(.*) #(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: ts-db-svc
            port:
              number: 8086
